# Chess-RL-neural

./: .gitignore  README.md  pyproject.toml
scripts/: kqk_neural.py
src/chess_rl/: __init__.py  env.py  evaluate.py  features.py  live_viewer.py  neural_agent.py  policies.py  syzygy.py  syzygy_utils.py  train.py
src/chess_rl/endgames/: __init__.py  kqk.py
tests/: test_features.py  test_kqk_env.py  test_neural_smoke.py
